--- a/trunk/projects/CodeLite/QuimeraEngine/Core/Core.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Core/Core.project
@@ -109,9 +109,9 @@
     <Project Name="Tools"/>
     <Project Name="System"/>
   </Dependencies>
-  <Settings Type="Dynamic Library">
+  <Settings Type="Static Library">
     <GlobalSettings>
-      <Compiler Options="" C_Options="" Assembler="">
+      <Compiler Options="-Wno-comment" C_Options="" Assembler="">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="">
