--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -105,9 +105,16 @@
     <Project Name="Common"/>
     <Project Name="Tools"/>
   </Dependencies>
-  <Settings Type="Dynamic Library">
+  <VirtualDirectory Name="Timing">
+    <File Name="../../../../headers/QLocalTimeZone.h"/>
+    <File Name="../../../../source/QLocalTimeZone.cpp"/>
+    <VirtualDirectory Name="Workarounds">
+      <File Name="../../../../headers/Workarounds/WinBase_Workarounds.h"/>
+    </VirtualDirectory>
+  </VirtualDirectory>
+  <Settings Type="Static Library">
     <GlobalSettings>
-      <Compiler Options="" C_Options="" Assembler="">
+      <Compiler Options="-Wno-comment" C_Options="" Assembler="">
         <IncludePath Value="."/>
       </Compiler>
       <Linker Options="">
@@ -120,6 +127,9 @@
         <IncludePath Value="../../../../headers"/>
         <IncludePath Value="../../../../3rdparty/ICU/include"/>
         <IncludePath Value="../../../../3rdparty/Boost/include"/>
+        <IncludePath Value="J:/WindowsKit/8.0/Include/um"/>
+        <IncludePath Value="J:/WindowsKit/8.0/Include/shared"/>
+        <IncludePath Value="_M_IX86"/>
         <Preprocessor Value="_DEBUG"/>
         <Preprocessor Value="QE_PREPROCESSOR_EXPORTLIB_SYSTEM"/>
         <Preprocessor Value="QE_PREPROCESSOR_IMPORTLIB_TOOLS"/>
