--- a/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj
@@ -108,6 +108,7 @@
     <ClInclude Include="..\..\..\..\headers\QAlignment.h" />
     <ClInclude Include="..\..\..\..\headers\QCharUnicode.h" />
     <ClInclude Include="..\..\..\..\headers\QDelegate.h" />
+    <ClInclude Include="..\..\..\..\headers\QLinearAllocator.h" />
     <ClInclude Include="..\..\..\..\headers\QPoolAllocator.h" />
     <ClInclude Include="..\..\..\..\headers\QStringUnicode.h" />
     <ClInclude Include="..\..\..\..\headers\QType.h" />
@@ -127,6 +128,7 @@
     <ClCompile Include="..\..\..\..\source\QCharIterator.cpp" />
     <ClCompile Include="..\..\..\..\source\QCharUnicode.cpp" />
     <ClCompile Include="..\..\..\..\source\QConstCharIterator.cpp" />
+    <ClCompile Include="..\..\..\..\source\QLinearAllocator.cpp" />
     <ClCompile Include="..\..\..\..\source\QPoolAllocator.cpp" />
     <ClCompile Include="..\..\..\..\source\QStringUnicode.cpp" />
     <ClCompile Include="..\..\..\..\source\QType.cpp" />
