409 - QStackAllocator All the corrections of the last review have been applied. Some additional fixes done to QLinearAllocator.

--- a/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/Common/Common.project
@@ -126,6 +126,7 @@
     <File Name="../../../../headers/QStackAllocator.h"/>
     <File Name="../../../../source/QMark.cpp"/>
     <File Name="../../../../source/QStackAllocator.cpp"/>
+    <File Name="../../../../source/QBlockHeader.cpp"/>
   </VirtualDirectory>
   <Settings Type="Static Library">
     <GlobalSettings>
