--- a/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj.filters
@@ -127,5 +127,8 @@
     <ClCompile Include="..\..\..\..\source\QStackAllocator.cpp">
       <Filter>Memory</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\source\QBlockHeader.cpp">
+      <Filter>Memory</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
