553 - SQAnyTypeToStringConverter Done. ToString method added to QObject. Bool specialization added to QType::FindType method.

--- a/trunk/projects/CodeLite/QuimeraEngine/System/System.project
+++ b/trunk/projects/CodeLite/QuimeraEngine/System/System.project
@@ -409,4 +409,8 @@
   <VirtualDirectory Name="IO">
     <File Name="../../../../headers/QMemoryStream.h"/>
   </VirtualDirectory>
+  <VirtualDirectory Name="DataTypes">
+    <File Name="../../../../headers/SQAnyTypeToStringConverter.h"/>
+    <File Name="../../../../source/SQAnyTypeToStringConverter.cpp"/>
+  </VirtualDirectory>
 </CodeLite_Project>
